# maknaflow

./: .gitignore  API_ENDPOINTS.md  README.md  WHATSAPP_ACTION_ITEMS.md  check_database_ids.sh
.github/workflows/: azure-webapps-python.yml
backend/: .env.example  .gitignore  build.sh  pyproject.toml  requirements.txt  startup.sh
backend/app/: adapters.py  admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/app/ingestion/: email_ingestion.py  email_webhook.py  hitachi_parser.py  luna_parser.py  luna_parser_sendgrid.py  utils.py
backend/app/integrations/: whatsapp_parser.py  whatsapp_service.py
backend/app/management/commands/: create_superuser.py  email_ingest_command.py
backend/app/migrations/: 0001_initial.py  0002_transaction_unique_transaction_per_source.py  0003_dailysummary.py  0003_remove_transaction_unique_transaction_per_source.py  0004_transaction_unique_transaction_per_source.py
backend/app/tests/: test_admin.py  test_authentication.py  test_email.py  test_model.py  test_parser.py  test_serializers.py  test_urls.py  test_views.py
backend/config/: settings.py  urls.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/layout/: NavBar.jsx
frontend/src/features/add-business/: AddBusinessPage.jsx
frontend/src/features/auth/: LoginPage.jsx  index.js
frontend/src/features/dashboard/: DashboardPage.jsx
frontend/src/features/settings/: SettingsPage.jsx
frontend/src/layout/: AuthenticatedLayout.jsx
frontend/src/lib/: axios.js
frontend/src/lib/api/: transactions.js  (+2 more)
whatsapp-service/: index.js  package-lock.json  package.json
whatsapp-service/.wwebjs_auth/session/: DevToolsActivePort  Local State  SingletonCookie  SingletonLock  SingletonSocket
whatsapp-service/.wwebjs_cache/: 2.3000.1031870451.html  2.3000.1031918589.html
(+225 files in other folders)
